frontend/app/app.component.scss
mat-sidenav {
  max-width: 100%;
}

mat-sidenav-container {
  margin-top: 56px;
}


mat-toolbar {
  position: fixed;
  top: 0;
  height: 56px;
  z-index: 2;
  max-width: 100%;
}

h1 {
  display: flex;
  flex: 1 1 auto;
  overflow: hidden;
}

.title {
  color: white;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-decoration: unset;

  .mat-icon {
    font-size: 20px;
  }
}

a.title:hover {
  text-decoration: underline;
}

.spacer {
  flex: 1 1 auto;
}

.unread {
  margin-left: 4px;
}

.fixed-layout {
  mat-sidenav {
    border: none;
    width: 200px;
  }

  mat-sidenav-container {
    margin-top: 0;
  }
}

.filler {
  flex: 1 1 auto;
}

